Actions
Bug #13117
closedzfs: variable dereferenced before check
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
smatch error:
/code/illumos-gate/usr/src/tools/proto/root_i386-nd/opt/onbld/bin/i386/smatch: ../../common/fs/zfs/zvol.c:1164 zvol_dumpio() warn: variable dereferenced before check 'ze' (see line 1159)
We can use for loop there.
Testing done: build/install/boot
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 92db730eedd4fcf11958d5b89b6d63f99488d594
commit 92db730eedd4fcf11958d5b89b6d63f99488d594 Author: Toomas Soome <tsoome@me.com> Date: 2020-09-11T21:13:30.000Z 13117 zfs: variable dereferenced before check Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions